# scry-cli

./: .gitignore  Cargo.toml  HYPERLINKS.md  MENU.md  README.md
.github/: CONTRIBUTING.md
docs/: ANTHROPIC_OAUTH_TEST.md  NOTES.md  SCROLLING.md  config.example.toml  gradient_presets.md
src/: animated_gradient_example.rs  app.rs  config.rs  input.rs  lib.rs  llm.rs  main.rs  message.rs  welcome.rs
src/auth/: anthropic.rs  mod.rs  oauth.rs  pkce.rs  storage.rs
src/llm/: anthropic.rs  copilot.rs  mod.rs  ollama.rs  openrouter.rs  provider.rs
src/ui/: anthropic_dialogs.rs  auth_dialog.rs  dialog.rs  gradient.rs  menu.rs  mod.rs  render.rs  text.rs  toast.rs
tests/: anthropic_ui_snapshot_test.rs  config_test.rs  message_test.rs  text_test.rs
tests/snapshots/: anthropic_ui_snapshot_test__anthropic_method_dialog_first_option_selected.snap  anthropic_ui_snapshot_test__anthropic_method_dialog_second_option_selected.snap  anthropic_ui_snapshot_test__anthropic_method_dialog_third_option_selected.snap  anthropic_ui_snapshot_test__auth_code_entry_claude_pro_empty.snap  anthropic_ui_snapshot_test__auth_code_entry_claude_pro_with_code.snap  anthropic_ui_snapshot_test__auth_code_entry_claude_pro_with_error.snap  anthropic_ui_snapshot_test__auth_code_entry_create_api_key_empty.snap  anthropic_ui_snapshot_test__auth_code_entry_create_api_key_with_code.snap  anthropic_ui_snapshot_test__exchanging_code_dialog.snap
