[package]
name = "scry-cli"
version = "0.1.0"
edition = "2021"
description = "A beautiful terminal-based chat interface with gradient borders and smooth scrolling"
license = "MIT"
keywords = ["cli", "tui", "chat", "terminal", "ratatui"]
categories = ["command-line-interface"]

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "macros", "time"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
open = "5.1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.10"
insta = "1.34"
